# vedrr

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  translation.yml
.github/workflows/: release.yml
design/: design.pen  mindflow.pen  pencil-new.pen  quick-switcher-redesign.html  vscode_lemo.code-profile.pen
docs/: ai-context-capture-chatgpt-vs-claude.md  macos-codesign-preparation.md  plan-context-capture-work-with-apps.md  release-notes-v0.2.0.md
docs/archived/: 2026-02-18-tree-collapse-design.md  compact-redesign.md  frontend-optimization-report.md  naming-analysis-round2.md  naming-analysis.md
docs/brainstorm/: PROPOSALS.md  eng1-frontend-feasibility.md  eng2-backend-feasibility.md  pm1-capture-ux.md  pm2-classify-algo.md  pm3-inbox-design.md  pm4-tree-placement.md  pm5-cross-context.md  pm6-competitive.md
docs/context/: tpm1-frontend-context.md  (+1 more)
research/: accessibility-api-crates.md  cross-platform-desktop-ai-context-capture.md  desktop-app-context-capture-report.md  mcp-server-discovery-research.md
scripts/: test_embedding_live.py  test_embedding_similarity.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  embedding.rs  error.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  context.rs  file_ops.rs  inbox.rs  mod.rs  node.rs  search.rs  settings.rs  shortcuts.rs
(+79 files in other folders)
