[package]
name = "mind-flow"
version = "0.1.0"
description = "Mind Flow - Contextual Knowledge Manager"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
